// ============================================================================
// /rd/plm-integration-service (版本 2.0)
// 描述: 与产品生命周期管理(PLM)系统集成，同步物料主数据和物料清单(BOM)。
//       字段设计参考核心ERP的 MAST (物料BOM), STKO (BOM抬头), STPO (BOM项目) 表。
// ============================================================================

syntax = "proto3";

package enterprise.rd.plm;

option java_package = "com.enterprise.rd.plm.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/rd/plm/v2;plm";

import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: PLMIntegrationService
// ============================================================================

service PLMIntegrationService {
  // 从PLM系统同步一个物料清单 (BOM) 到核心ERP - 异步
  rpc SyncBillOfMaterial(SyncBOMRequest) returns (enterprise.common.JobInfo) {

    option (google.api.http) = {

      post: "/api/v1/rd/sync-bill-of-material"

      body: "*"

    };

  }
  
  // 同步物料主数据 (New)
  rpc SyncMaterialMaster(SyncMaterialMasterRequest) returns (SyncMaterialMasterResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/rd/sync-material-master"

  
      body: "*"

  
    };

  
  }

  // 获取核心ERP中的物料清单
  rpc GetBillOfMaterial(GetBOMRequest) returns (BillOfMaterial) {


    option (google.api.http) = {


      get: "/api/v1/rd/bill-of-material"


    };


  }
  
  // 更新物料清单 (New)
  rpc UpdateBillOfMaterial(UpdateBOMRequest) returns (BOMResponse) {

  
    option (google.api.http) = {

  
      put: "/api/v1/rd/bill-of-material"

  
      body: "*"

  
    };

  
  }
  
  // 查询BOM列表 (New)
  rpc ListBillOfMaterials(ListBOMsRequest) returns (ListBOMsResponse) {

  
    option (google.api.http) = {

  
      get: "/api/v1/rd/bill-of-materials"

  
    };

  
  }
}

// ============================================================================
// 数据结构: BillOfMaterial (BOM)
// ============================================================================

// 物料清单 (BOM)
message BillOfMaterial {
  BOMHeader header = 1;
  repeated BOMItem items = 2;
  enterprise.common.AuditData audit_data = 3;
}

// BOM 抬头 (参考: STKO)
message BOMHeader {
  string material = 1;
  string plant = 2;
  enterprise.common.BOMUsage bom_usage = 3;
  enterprise.common.BOMStatus bom_status = 4;
  string base_quantity = 5;
  string alternative_bom = 6;
  google.protobuf.Timestamp valid_from = 7;
}

// BOM 项目 (参考: STPO)
message BOMItem {
  string item_node = 1;
  enterprise.common.BOMItemCategory item_category = 2;
  string component_material = 3;
  string component_quantity = 4;
  string component_unit = 5;
  string item_text = 6;
  bool recursive_allowed = 7;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 同步BOM请求
message SyncBOMRequest {
  BillOfMaterial bom = 1;
  string change_number = 2;
  enterprise.common.RequestContext context = 99;
}

message SyncMaterialMasterRequest {
  string material_number = 1;
  string description = 2;
  string material_type = 3;
  string base_unit = 4;
  enterprise.common.RequestContext context = 99;
}

message SyncMaterialMasterResponse {
  bool success = 1;
  repeated enterprise.common.ApiMessage messages = 2;
}

// 获取BOM请求
message GetBOMRequest {
  string material = 1;
  string plant = 2;
  enterprise.common.BOMUsage bom_usage = 3;
  string alternative_bom = 4;
  enterprise.common.RequestContext context = 99;
}

message UpdateBOMRequest {
  string material = 1;
  string plant = 2;
  enterprise.common.BOMUsage bom_usage = 3;
  BillOfMaterial bom = 4;
  repeated string update_mask = 5;
  enterprise.common.RequestContext context = 99;
}

message BOMResponse {
  bool success = 1;
  string bom_number = 2;
  repeated enterprise.common.ApiMessage messages = 3;
}

message ListBOMsRequest {
  string material = 1;
  string plant = 2;
  enterprise.common.BOMStatus status_filter = 3;
  enterprise.common.PaginationRequest pagination = 98;
  enterprise.common.RequestContext context = 99;
}

message ListBOMsResponse {
  repeated BillOfMaterial boms = 1;
  enterprise.common.PaginationResponse pagination = 2;
}
